packages/jsts/tests/dbd/benchmark/TypeError/T13 X is not a non-null object/T13-01/fixed.js
const mergeInto = {};
const prop = 'foo';
const mergeFrom = {};

var descriptor = Object.getOwnPropertyDescriptor(Object(mergeFrom), prop);
if (descriptor) {
  Object.defineProperty(mergeInto, prop, descriptor);
}
